# NeSyCa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt
Config/: config.go  types.go  unmarshal.go
Controller/: controller.go
Core/: config.py  logger.py
NeSyCa/: client.py
Utils/: utils.go
Writer/: types.go  writer.go
