[tool.poetry]
name = "nesyca"
version = "0.1.0"
description = ""
authors = ["anonopiran <anonopiran@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
Flake8-pyproject = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
force-exclude = 'V2RayMan/v2ray_proto'

[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503', 'F403', 'F401']
max-line-length = 79
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
exclude = 'V2RayMan/v2ray_proto/*'
